# combine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  setup.py
combine/: AdditionalModels.py  DatacardParser.py  DegenerateMatrixRank.py  HiggsCouplingsLOSM.py  HiggsCouplings_ICHEP12.py  HiggsJPC.py  LHCHCGModels.py  LOFullParametrization.py  ModelTools.py  NuisanceModifier.py  PhysicsModel.py  QuasiDegenerate.py  SMHiggsBuilder.py  STXSModels.py  ShapeTools.py  TrilinearCouplingModels.py  VEVandEpsilon.py  __init__.py  algos.py  text2workspace.py
combine/HiggsBenchmarkModels/: FermionSectorModels.py  LoopAndInvisibleModel.py  VectorsAndFermionsModels.py
data/hbb/: scaleCards.py
data/hww/: errorMatrix2Lands.py  errorMatrix2Lands_multiChannel.py  interpolateCardsSimple.py  interpolateCardsSimple4G.py  interpolateCardsSimpleSMto4G.py
data/lhc-hxswg/: makeSMtables.py
data/tutorials/: count_toys_with_signif_lt_localmax.C  testRooMomentMorphND.C
doc/part2/: runcard.py
doc/part3/: example_post.py
examples/: BrazilianPlots.py  CMS_lumi.py  binned_shape_significance.py  brazilian_plots.py  cms_lumi.py  tdrstyle.py
include/combine/: AsimovUtils.h  AsymPow.h  AsymQuad.h  AsymptoticLimits.h  AtlasPdfs.h  BayesianFlatPrior.h  BayesianToyMC.h  CMSHistErrorPropagator.h  CMSHistFunc.h  CMSHistFuncWrapper.h  CachingMultiPdf.h  CascadeMinimizer.h  ChannelCompatibilityCheck.h  Combine.h  FeldmanCousins.h  FitDiagnostics.h  FitterAlgoBase.h  GBRMath.h  GenerateOnly.h  GoodnessOfFit.h  HWWLVJJRooPdfs.h  HWWLVJRooPdfs.h  HZZ4LRooPdfs.h  HZZ4L_RooCTauPdf_1D_Expanded.h  HZZ4L_RooCTauPdf_2D.h  HZZ4L_RooSpinZeroPdf_2D.h  HZZ4L_RooSpinZeroPdf_phase_fast.h  HybridNew.h  LimitAlgo.h  MarkovChainMC.h  MultiDimFit.h  PdfDiagonalizer.h  RooCheapProduct.h  RooDoubleCBFast.h  RooMomentMorphND.h  RooMultiPdf.h  RooNCSplineFactory_2D.h  RooNCSpline_1D_fast.h  RooNCSpline_2D_fast.h  SequentialMinimizer.h  (+10 more)
interface/: Accumulators.h  AsymptoticLimits.h  BayesianFlatPrior.h  BayesianToyMC.h  BestFitSigmaTestStat.h  CMSHistErrorPropagator.h  CMSHistFunc.h  CMSHistFuncWrapper.h  CMSHistV.h  CachingMultiPdf.h  CachingNLL.h  CascadeMinimizer.h  ChannelCompatibilityCheck.h  CombDataSetFactory.h  Combine.h  DebugProposal.h  FastTemplate.h  FastTemplate.hpp  FastTemplateFunc.h  FastTemplate_Old.h  FeldmanCousins.h  FitDiagnostics.h  FitterAlgoBase.h  GBRMath.h  GaussExp.h  GenerateOnly.h  GoodnessOfFit.h  HWWLVJJRooPdfs.h  HZGRooPdfs.h  HZZ2L2QRooPdfs.h  HZZ4L_RooCTauPdf_1D.h  HZZ4L_RooCTauPdf_2D.h  HZZ4L_RooSpinZeroPdf_1D.h  HZZ4L_RooSpinZeroPdf_1D_fast.h  HZZ4L_RooSpinZeroPdf_2D_fast.h  HybridNew.h  Logger.h  MarkovChainMC.h  MultiDimFit.h  ProcessNormalization.h  (+25 more)
libcombine/interface/: AtlasPdfs.h  BayesianToyMC.h  CMSHistErrorPropagator.h  CloseCoutSentry.h  FitterAlgoBase.h  FnTimer.h  GenerateOnly.h  HGGRooPdfs.h  HZZ4L_RooSpinZeroPdf.h  HZZ4L_RooSpinZeroPdf_phase.h  JacknifeQuantile.h  LimitAlgo.h  MarkovChainMC.h  ProfiledLikelihoodRatioTestStat.h  ProfiledLikelihoodRatioTestStatExt.h  RooBernsteinFast.h  RooNCSplineFactory_1D.h  RooNCSpline_3D_fast.h  RooParametricShapeBinPdf.h  RooPiecewisePolynomial.h  RooSimultaneousOpt.h  Significance.h  SimpleGaussianConstraint.h  SimplePoissonConstraint.h  SimplerLikelihoodRatioTestStat.h  SimplerLikelihoodRatioTestStatExt.h  VBFHZZ4L_RooSpinZeroPdf.h  VerticalInterpPdf.h  th1fmorph.h
libcombine/src/: AsimovUtils.cc  AsymPow.cc  BayesianToyMC.cc  BestFitSigmaTestStat.cc  CMSHistErrorPropagator.cc  CMSHistFuncWrapper.cc  CMakeLists.txt  CMakeLists.txt.bak  CachingMultiPdf.cc  CascadeMinimizer.cc  CloseCoutSentry.cc  CombDataSetFactory.cc  Combine.cc  FastTemplate_Old.cc  FeldmanCousins.cc  FitterAlgoBase.cc  GBRMath.cc  GenerateOnly.cc  HGGRooPdfs.cc  RooFuncPdf.cc  (+39 more)
patches/: ROOTpy_v6.16.00.patch
python/: ChargedHiggs.py  Datacard.py  DatacardParser.py  DatacardPruner.py  FloatingHiggsWidth.py  HTTAnomalousCouplings.py  HiggsCouplings.py  HiggsCouplingsLOSM.py  HiggsCouplings_ICHEP12.py  HiggsFermiophobic.py  HiggsWidth.py  InvisibleWidth.py  ModelTools.py  NuisanceModifier.py  PhysicsModel.py  QuasiDegenerate.py  SMHiggsBuilder.py  ShapeTools.py  SpinZeroHiggsCTau.py  SpinZeroStructure.py  TagAndProbeModel.py  TrilinearCouplingModels.py  TwoHiggsModels.py  VEVandEpsilon.py  calculate_pulls.py  setup.py
scripts/: combineCards.py  commentUncerts.py  pruneUncerts.py  text2workspace.py
src/: AsimovUtils.cc  AsymPow.cc  AsymQuad.cc  AsymptoticLimits.cc  AtlasPdfs.cxx  BayesianFlatPrior.cc  BayesianToyMC.cc  BestFitSigmaTestStat.cc  CMSHistErrorPropagator.cc  CMSHistFunc.cc  CMSHistFuncWrapper.cc  CMakeLists.txt  CachingMultiPdf.cc  CachingNLL.cc  CascadeMinimizer.cc  ChannelCompatibilityCheck.cc  CloseCoutSentry.cc  CombDataSetFactory.cc  Combine.cc  DebugProposal.cc  FastTemplate_Old.cc  FeldmanCousins.cc  FitDiagnostics.cc  FitterAlgoBase.cc  FnTimer.cc  GBRMath.cc  GaussExp.cxx  GenerateOnly.cc  GoodnessOfFit.cc  HGGRooPdfs.cc  HWWLVJJRooPdfs.cc  HWWLVJRooPdfs.cxx  HZGRooPdfs.cxx  HZZ2L2QRooPdfs.cc  HZZ4LRooPdfs.cc  HZZ4L_RooCTauPdf_1D.cc  HZZ4L_RooCTauPdf_1D_Expanded.cc  HZZ4L_RooCTauPdf_2D.cc  HZZ4L_RooSpinZeroPdf.cc  HZZ4L_RooSpinZeroPdf_1D.cc  (+67 more)
test/: README.md  compile-standalone.sh  datacardDump.py  diffNuisances.py  findRedundantSystematics.py  higgsBrUncertainties.py  isValidNuisanceName.py  leeFromUpcrossings.py  loadLib.C  makeAsymptoticGrid.py  makeFCcontour.py  makeGrid2DUsingCrab.py  makeGridUsingCrab.py  makeToyBkgdHist.py  mkBayesUsingCrab.py  mlfitNormsToText.py  morphing_tests.cxx  parallelScan.py  plotParametersFromToys.C  plotTestStatCLs.py  printCorrelations.py  printWorkspaceNormalisations.py  rVrFLikelihoodScan.py  rankSystematics.py  scanScalefactorsFromWS.py  sizeUpSystematics.py  splitToys.py  systematicsAnalyzer.py  test.py  test_asymptotic_limits.py  test_asymptotic_limits_1.py  test_asymptotic_limits_2.py  test_bayesian_simple_1.py  test_bayesian_toy_mc_1.py  test_fit_diagnostics_1.py  test_hybrid_new_1.py  test_multi_dim_fit_1.py  test_significance.py  test_significance_1.py  test_significance_2.py  (+3 more)
(+72 files in other folders)
